@@ -1,4 +1,4 @@
-/* $Id: eswitch.c,v 1.3 2004-12-19 15:21:11 btb Exp $ */
+/* $Id: eswitch.c,v 1.4 2004-12-24 05:17:09 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -19,7 +19,7 @@ COPYRIGHT 1993-1998 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  */
 
 #ifdef RCS
-static char rcsid[] = "$Id: eswitch.c,v 1.3 2004-12-19 15:21:11 btb Exp $";
+static char rcsid[] = "$Id: eswitch.c,v 1.4 2004-12-24 05:17:09 btb Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -190,7 +190,8 @@ int bind_matcen_to_trigger() {
 		return 0;
 	}
 
-	if (!(Cursegp->special & SEGMENT_IS_ROBOTMAKER)) {
+	if (!(Curseg2p->special & SEGMENT_IS_ROBOTMAKER))
+	{
 		editor_status("No Matcen at Cursegp.");
 		return 0;
 	}
